v1.10.x/how-to-guides/mcp/cursor.mdx
---
title: Getting Started with Cursor
description: Connect your OpenMetadata MCP Server to Cursor IDE for AI-powered metadata exploration.
slug: /v1.10.x/how-to-guides/mcp/cursor
sidebarTitle: Getting Started with Cursor
---

# Getting Started with Cursor

Connect your OpenMetadata instance to Cursor IDE for AI-powered metadata exploration.

## Prerequisites

Before you begin, ensure you have:

1. **OpenMetadata v1.8.0+** running (e.g., `http://localhost:8585`)
2. **MCP Application** installed in OpenMetadata
   - Navigate to `<YOUR-OpenMetadata-SERVER>/marketplace/apps/`
   - Install **McpApplication** if not already installed
3. **[MCP Application and Personal Access Token](/v1.10.x/how-to-guides/guide-for-data-users/personal-access-token)** - Follow this guide to generate your PAT
4. **Cursor IDE** installed with MCP support

## Configure Cursor MCP Server

Cursor locates the MCP configuration file at:

**macOS/Linux:**
```bash
~/.cursor/mcp.json
```

**Windows:**
```bash
%APPDATA%\Cursor\mcp.json
```

Create the `.cursor` directory if it doesn't exist, then create the configuration file:

```json
{
  "mcpServers": {
    "OpenMetadata": {
      "url": "<YOUR-OpenMetadata-SERVER>/mcp",
      "protocol": "sse",
      "headers": {
        "Authorization": "Bearer <YOUR-OpenMetadata-PAT>"
      }
    }
  }
}
```

Replace `<YOUR-OpenMetadata-SERVER>` with your server URL and `<YOUR-OpenMetadata-PAT>` with your Personal Access Token from the Prerequisites step.

<img noZoom src="/public/images/how-to-guides/mcp/cursor-config-file.png" alt="Cursor MCP Configuration File" />

> **Project-Specific Configuration**: You can also create `.cursor/mcp.json` in your project root directory. Project-specific configuration takes precedence over global configuration.

## Restart Cursor

Save the configuration file and restart Cursor completely to load the MCP server:
- **macOS**: `Cmd+Q` or Cursor → Quit Cursor
- **Windows/Linux**: Close all Cursor windows and reopen

<img noZoom src="/public/images/how-to-guides/mcp/cursor-connected.png" alt="Cursor MCP Server Connected" />

## Try It Out

Once Cursor restarts, test your connection by asking questions in Cursor's chat:

> "Imagine you're a data analyst tasked with building a customer retention dashboard. You need tables that track customer transactions, engagement metrics, and churn indicators. Find relevant customer and transaction tables in the metadata catalog."

You should see Cursor using the OpenMetadata MCP tools to search and retrieve information from your metadata catalog.

## Troubleshooting

If you encounter connection issues:

1. **Verify OpenMetadata is running**: `curl <YOUR-OpenMetadata-SERVER>/api/health`
2. **Check MCP endpoint**: `curl <YOUR-OpenMetadata-SERVER>/mcp` (should return 401)
3. **Verify MCP Application is installed**: Visit `<YOUR-OpenMetadata-SERVER>/marketplace/apps/McpApplication`
4. **Check configuration file syntax**: Ensure JSON is valid and file path is correct
5. **Token expired**: [Generate a new PAT](/v1.10.x/how-to-guides/guide-for-data-users/personal-access-token) and update your configuration
6. **Restart Cursor** after making configuration changes

## Additional Resources

- [OpenMetadata MCP Documentation](/v1.10.x/how-to-guides/mcp)
- [MCP Protocol Specification](https://modelcontextprotocol.io)
- [Cursor Documentation](https://docs.cursor.com)
